new changes added

--- a/index.html
+++ b/index.html
@@ -211,6 +211,39 @@
                 <i class="fab fa-bootstrap"></i>
             </div>
         </div>
+        <!-- 11 -->
+        <div class="game-block" data-technology="bootstrap">
+            <div class="face front"></div>
+            <div class="face back">
+                <i class="fab fa-bootstrap"></i>
+            </div>
+        </div>
+
+
+        <div class="game-block" data-technology="bootstrap">
+            <div class="face front"></div>
+            <div class="face back">
+                <i class="fab fa-bootstrap"></i>
+            </div>
+        </div>
+
+
+
+        <!-- 12 -->
+        <div class="game-block" data-technology="bootstrap">
+            <div class="face front"></div>
+            <div class="face back">
+                <i class="fab fa-bootstrap"></i>
+            </div>
+        </div>
+
+
+        <div class="game-block" data-technology="bootstrap">
+            <div class="face front"></div>
+            <div class="face back">
+                <i class="fab fa-bootstrap"></i>
+            </div>
+        </div>
 
 
 
