--- a/index.html
+++ b/index.html
@@ -184,13 +184,13 @@
         </div>
 
         <!-- 11 -->
-        <div class="game-block" data-technology="bootstrap">
+        <div class="game-block" data-technology="c++">
             <div class="face front"></div>
             <div class="face back"></div>
         </div>
 
 
-        <div class="game-block" data-technology="bootstrap">
+        <div class="game-block" data-technology="c++">
             <div class="face front"></div>
             <div class="face back"></div>
         </div>
@@ -198,13 +198,13 @@
 
 
         <!-- 12 -->
-        <div class="game-block" data-technology="bootstrap">
+        <div class="game-block" data-technology="java">
             <div class="face front"></div>
             <div class="face back"></div>
         </div>
 
 
-        <div class="game-block" data-technology="bootstrap">
+        <div class="game-block" data-technology="java">
             <div class="face front"></div>
             <div class="face back"></div>
             </div>
